<resources>
    <string name="app_name">ContactsApp</string>
    <string name="name">Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="email">Email</string>
    <string name="description">Description</string>
    <string name="save">Save</string>
    <string name="contact_details">Contact Details</string>
    <string name="number">Number</string>
    <string name="whatsapp">Whatsapp</string>
</resources>